--- a/index.html
+++ b/index.html
@@ -28,17 +28,19 @@
         <!-- Главная навигация -->
         <nav>
           <ul class="menu-nav link">
-            <li><a class="link current" href="./index.html">Студия</a></li>
-            <li>
+            <li class="mnav-item">
+              <a class="link current" href="./index.html">Студия</a>
+            </li>
+            <li class="mnav-item">
               <a href="./portfolio.html">Портфолио</a>
             </li>
-            <li>
+            <li class="mnav-item">
               <a href="">Контакты</a>
             </li>
           </ul>
         </nav>
 
-        <ul>
+        <ul class="header-mail-tel">
           <li class="contact-email link">
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
