--- a/index.html
+++ b/index.html
@@ -20,42 +20,46 @@
   </head>
   <body>
     <header>
-      <div class="topline">
-        <!-- Логотип WebStudio -->
-        <a href="" lang="en" class="webstudio link">
-          <span class="web">Web</span>Studio</a
-        >
-        <!-- Главная навигация -->
-        <nav>
-          <ul class="menu-nav link">
-            <li class="mnav-item">
-              <a class="link current" href="./index.html">Студия</a>
+      <div class="container">
+        <div class="topline">
+          <!-- Логотип WebStudio -->
+          <a href="" lang="en" class="webstudio link">
+            <span class="web">Web</span>Studio</a
+          >
+          <!-- Главная навигация -->
+          <nav class="navigation">
+            <ul class="menu-nav link">
+              <li class="mnav-item">
+                <a class="link current" href="./index.html">Студия</a>
+              </li>
+              <li class="mnav-item">
+                <a href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="mnav-item">
+                <a href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="header-mail-tel">
+            <li class="contact-email link">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li class="mnav-item">
-              <a href="./portfolio.html">Портфолио</a>
-            </li>
-            <li class="mnav-item">
-              <a href="">Контакты</a>
+            <li class="contact-tel">
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
-
-        <ul class="header-mail-tel">
-          <li class="contact-email link">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="contact-tel">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
     <!-- Основной контент страницы -->
     <main>
       <!-- Секция Hero - Решения для бизнеса c кнопкой Заказать -->
       <section class="hero">
-        <h1 class="hero-slogan">Эффективные решения для вашего бизнеса</h1>
-        <button class="hero-btn" type="button">Заказать услугу</button>
+        <div class="container">
+          <h1 class="hero-slogan">Эффективные решения для вашего бизнеса</h1>
+          <button class="hero-btn" type="button">Заказать услугу</button>
+        </div>
       </section>
       <!-- Секция особенностей - здесь 4 особенности -->
       <section class="our-spec">
