--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <link href="./css/styles.css" rel="stylesheet" />
   </head>
   <body>
-    <header>
+    <header class="page-header">
       <div class="container">
         <div class="topline">
           <!-- Логотип WebStudio -->
