--- a/index.html
+++ b/index.html
@@ -63,37 +63,39 @@
       </section>
       <!-- Секция особенностей - здесь 4 особенности -->
       <section class="our-spec">
-        <h2 hidden>Наши особенности</h2>
-        <ul class="our-spec-list list">
-          <li class="our-spec-item">
-            <h3 class="our-spec-title">Внимание к деталям</h3>
-            <p class="our-spec-desc">
-              Идейные соображения, а также начало повседневной работы по
-              формированию позиции.
-            </p>
-          </li>
-          <li class="our-spec-item">
-            <h3 class="our-spec-title">Пунктуальность</h3>
-            <p class="our-spec-desc">
-              Задача организации, в особенности же рамки и место обучения кадров
-              влечет за собой.
-            </p>
-          </li>
-          <li class="our-spec-item">
-            <h3 class="our-spec-title">Планирование</h3>
-            <p class="our-spec-desc">
-              Равным образом консультация с широким активом в значительной
-              степени обуславливает.
-            </p>
-          </li>
-          <li class="our-spec-item">
-            <h3 class="our-spec-title">Современные технологии</h3>
-            <p class="our-spec-desc">
-              Значимость этих проблем настолько очевидна, что реализация
-              плановых заданий.
-            </p>
-          </li>
-        </ul>
+        <div class="container">
+          <h2 class="visually-hidden">Наши особенности</h2>
+          <ul class="our-spec-list list">
+            <li class="our-spec-item">
+              <h3 class="our-spec-title">Внимание к деталям</h3>
+              <p class="our-spec-desc">
+                Идейные соображения, а также начало повседневной работы по
+                формированию позиции.
+              </p>
+            </li>
+            <li class="our-spec-item">
+              <h3 class="our-spec-title">Пунктуальность</h3>
+              <p class="our-spec-desc">
+                Задача организации, в особенности же рамки и место обучения
+                кадров влечет за собой.
+              </p>
+            </li>
+            <li class="our-spec-item">
+              <h3 class="our-spec-title">Планирование</h3>
+              <p class="our-spec-desc">
+                Равным образом консультация с широким активом в значительной
+                степени обуславливает.
+              </p>
+            </li>
+            <li class="our-spec-item">
+              <h3 class="our-spec-title">Современные технологии</h3>
+              <p class="our-spec-desc">
+                Значимость этих проблем настолько очевидна, что реализация
+                плановых заданий.
+              </p>
+            </li>
+          </ul>
+        </div>
       </section>
       <!-- Секция Чем мы занимаемся -->
       <section class="our-activities">
