--- a/portfolio.html
+++ b/portfolio.html
@@ -20,33 +20,37 @@
   </head>
   <body>
     <!-- Шапка сайта -->
-    <header>
-      <div class="topline">
-        <!-- Логотип WebStudio -->
-        <a href="" lang="en" class="webstudio link">
-          <span class="web">Web</span>Studio</a
-        >
-        <!-- Главная навигация -->
-        <nav>
-          <ul class="menu-nav link">
-            <li><a href="./index.html">Студия</a></li>
-            <li>
-              <a class="link current" href="./portfolio.html">Портфолио</a>
+    <header class="page-header">
+      <div class="container">
+        <div class="topline">
+          <!-- Логотип WebStudio -->
+          <a href="" lang="en" class="webstudio link">
+            <span class="web">Web</span>Studio</a
+          >
+          <!-- Главная навигация -->
+          <nav class="navigation">
+            <ul class="menu-nav link">
+              <li class="mnav-item">
+                <a href="./index.html">Студия</a>
+              </li>
+              <li class="mnav-item">
+                <a class="link current" href="./portfolio.html">Портфолио</a>
+              </li>
+              <li class="mnav-item">
+                <a href="">Контакты</a>
+              </li>
+            </ul>
+          </nav>
+
+          <ul class="header-mail-tel">
+            <li class="contact-email link">
+              <a href="mailto:info@devstudio.com">info@devstudio.com</a>
             </li>
-            <li>
-              <a href="">Контакты</a>
+            <li class="contact-tel">
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
             </li>
           </ul>
-        </nav>
-
-        <ul>
-          <li class="contact-email list">
-            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-          </li>
-          <li class="contact-tel list">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
+        </div>
       </div>
     </header>
     <main>
