Сделана секция Чем мы занимаемся

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </section>
       <!-- Секция Чем мы занимаемся -->
-      <section class="our-activities">
+      <section class="our-activities container">
         <h2 class="our-activities-title">Чем мы занимаемся</h2>
 
         <ul class="our-activities-list list">
@@ -130,51 +130,53 @@
       </section>
       <!-- Секция Наша команда -->
       <section class="our-team">
-        <h2 class="our-team-title">Наша команда</h2>
+        <div class="container">
+          <h2 class="our-team-title">Наша команда</h2>
 
-        <ul class="our-team-list list">
-          <li class="our-team-item">
-            <img
-              class="team-member-photo"
-              src="./images/ihor.jpg"
-              alt="Ihor Demyanenko photo"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-name">Игорь Демьяненко</h3>
-            <p class="team-member-title" lang="en">Product Designer</p>
-          </li>
-          <li class="our-team-item">
-            <img
-              src="./images/olga.jpg"
-              alt="Olga Repina photo"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-name">Ольга Репина</h3>
-            <p class="team-member-title" lang="en">Frontend Developer</p>
-          </li>
-          <li class="our-team-item">
-            <img
-              src="./images/nikolay.jpg"
-              alt="Nikolay Tarasov photo"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-name">Николай Тарасов</h3>
-            <p class="team-member-title" lang="en">Marketing</p>
-          </li>
-          <li class="our-team-item">
-            <img
-              src="./images/michail.jpg"
-              alt="Michail Ermakov photo"
-              width="270"
-              height="260"
-            />
-            <h3 class="team-member-name">Михаил Ермаков</h3>
-            <p class="team-member-title" lang="en">UI Designer</p>
-          </li>
-        </ul>
+          <ul class="our-team-list list">
+            <li class="our-team-item">
+              <img
+                class="team-member-photo"
+                src="./images/ihor.jpg"
+                alt="Ihor Demyanenko photo"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-name">Игорь Демьяненко</h3>
+              <p class="team-member-title" lang="en">Product Designer</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/olga.jpg"
+                alt="Olga Repina photo"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-name">Ольга Репина</h3>
+              <p class="team-member-title" lang="en">Frontend Developer</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/nikolay.jpg"
+                alt="Nikolay Tarasov photo"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-name">Николай Тарасов</h3>
+              <p class="team-member-title" lang="en">Marketing</p>
+            </li>
+            <li class="our-team-item">
+              <img
+                src="./images/michail.jpg"
+                alt="Michail Ermakov photo"
+                width="270"
+                height="260"
+              />
+              <h3 class="team-member-name">Михаил Ермаков</h3>
+              <p class="team-member-title" lang="en">UI Designer</p>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
