Сделана секция Наша команда

--- a/index.html
+++ b/index.html
@@ -142,8 +142,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-name">Игорь Демьяненко</h3>
-              <p class="team-member-title" lang="en">Product Designer</p>
+              <div class="team-name-container">
+                <h3 class="team-member-name">Игорь Демьяненко</h3>
+                <p class="team-member-title" lang="en">Product Designer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -152,8 +154,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-name">Ольга Репина</h3>
-              <p class="team-member-title" lang="en">Frontend Developer</p>
+              <div class="team-name-container">
+                <h3 class="team-member-name">Ольга Репина</h3>
+                <p class="team-member-title" lang="en">Frontend Developer</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -162,8 +166,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-name">Николай Тарасов</h3>
-              <p class="team-member-title" lang="en">Marketing</p>
+              <div class="team-name-container">
+                <h3 class="team-member-name">Николай Тарасов</h3>
+                <p class="team-member-title" lang="en">Marketing</p>
+              </div>
             </li>
             <li class="our-team-item">
               <img
@@ -172,8 +178,10 @@
                 width="270"
                 height="260"
               />
-              <h3 class="team-member-name">Михаил Ермаков</h3>
-              <p class="team-member-title" lang="en">UI Designer</p>
+              <div class="team-name-container">
+                <h3 class="team-member-name">Михаил Ермаков</h3>
+                <p class="team-member-title" lang="en">UI Designer</p>
+              </div>
             </li>
           </ul>
         </div>
