Сделана страница Студия
А также сделаны хедер и футер на Протфолио

--- a/index.html
+++ b/index.html
@@ -189,22 +189,24 @@
     </main>
 
     <!-- Подвал страницы -->
-    <footer class="site-bottom">
-      <!-- Логотип WebStudio -->
-      <a href="" lang="en" class="bottom-webstudio link">
-        <span class="web">Web</span>Studio</a
-      >
-      <address class="address-box">
-        <ul class="address-box-list list">
-          <li class="address-line">г. Киев, пр-т Леси Украинки, 26</li>
-          <li class="footer-email link">
-            <a href="mailto:info@example.com">info@example.com</a>
-          </li>
-          <li class="footer-tel link">
-            <a href="tel:+380961111111">+38 096 111 11 11</a>
-          </li>
-        </ul>
-      </address>
+    <footer class="footer">
+      <div class="container">
+        <!-- Логотип WebStudio -->
+        <a href="" lang="en" class="bottom-webstudio link">
+          <span class="web">Web</span>Studio</a
+        >
+        <address class="address-box">
+          <ul class="address-box-list list">
+            <li class="address-line">г. Киев, пр-т Леси Украинки, 26</li>
+            <li class="footer-email link">
+              <a href="mailto:info@example.com">info@example.com</a>
+            </li>
+            <li class="footer-tel link">
+              <a href="tel:+380961111111">+38 096 111 11 11</a>
+            </li>
+          </ul>
+        </address>
+      </div>
     </footer>
   </body>
 </html>
