--- a/portfolio.html
+++ b/portfolio.html
@@ -55,140 +55,168 @@
     </header>
     <main>
       <!--секция фильтров и карточки-->
-      <section>
-        <h1 hidden>Наши проекты</h1>
-        <ul class="filter-list list">
-          <li class="filter-list-item">
-            <button class="filter-btn" type="button">Все</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-btn" type="button">Веб-сайты</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-btn" type="button">Приложения</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-btn" type="button">Дизайн</button>
-          </li>
-          <li class="filter-list-item">
-            <button class="filter-btn" type="button">Маркетинг</button>
-          </li>
-        </ul>
-        <!-- Список карточек -->
-        <ul class="cards-list list">
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/technokryak.jpg"
-                alt="Проект технокряк"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Технокряк</h3>
-              <p class="cards-project-type">Веб-сайт</p>
-            </a>
-          </li>
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/basketball-poster.jpg"
-                alt="Постер Новый Орлеан против Голден Стар"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">
-                Постер New Orlean vs Golden Star
-              </h3>
-              <p class="cards-project-type">Дизайн</p>
-            </a>
-          </li>
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/restaurant-seafood.jpg"
-                alt="Ресторан Сифуд"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Ресторан Seafood</h3>
-              <p class="cards-project-type">Приложение</p>
-            </a>
-          </li>
+      <section class="projects">
+        <div class="container">
+          <h1 class="visually-hidden">Наши проекты</h1>
+          <div class="button-list">
+            <ul class="filter-list list">
+              <li class="filter-list-item">
+                <button class="filter-btn" type="button">Все</button>
+              </li>
+              <li class="filter-list-item">
+                <button class="filter-btn" type="button">Веб-сайты</button>
+              </li>
+              <li class="filter-list-item">
+                <button class="filter-btn" type="button">Приложения</button>
+              </li>
+              <li class="filter-list-item">
+                <button class="filter-btn" type="button">Дизайн</button>
+              </li>
+              <li class="filter-list-item">
+                <button class="filter-btn" type="button">Маркетинг</button>
+              </li>
+            </ul>
+          </div>
+          <!-- Список карточек -->
+          <ul class="cards-list list">
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/technokryak.jpg"
+                  alt="Проект технокряк"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Технокряк</h3>
+                  <p class="cards-project-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/project-prime.jpg"
-                alt="Проект Прайм"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Проект Prime</h3>
-              <p class="cards-project-type">Маркетинг</p>
-            </a>
-          </li>
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/project-boxes.jpg"
-                alt="Проект Боксес"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Проект Boxes</h3>
-              <p class="cards-project-type">Приложение</p>
-            </a>
-          </li>
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/inspiration.jpg"
-                alt="Веб-сайт проекта Inspiration has no Borders"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Inspiration has no Borders</h3>
-              <p class="cards-project-type">Веб-сайт</p>
-            </a>
-          </li>
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/basketball-poster.jpg"
+                  alt="Постер Новый Орлеан против Голден Стар"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">
+                    Постер New Orlean vs Golden Star
+                  </h3>
+                  <p class="cards-project-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
 
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/limited-edition.jpg"
-                alt="Издание Лимитед Эдишн"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Издание Limited Edition</h3>
-              <p class="cards-project-type">Дизайн</p>
-            </a>
-          </li>
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/project-lab.jpg"
-                alt="Проект Лаб"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Проект LAB</h3>
-              <p class="cards-project-type">Маркетинг</p>
-            </a>
-          </li>
-          <li class="cadrs-list-item">
-            <a href="">
-              <img
-                src="./images/growing-business.jpg"
-                alt="Приложение Гроуин бизнес"
-                width="370"
-                height="294"
-              />
-              <h3 class="cards-project-name">Growing Business</h3>
-              <p class="cards-project-type">Приложение</p>
-            </a>
-          </li>
-        </ul>
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/restaurant-seafood.jpg"
+                  alt="Ресторан Сифуд"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Ресторан Seafood</h3>
+                  <p class="cards-project-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/project-prime.jpg"
+                  alt="Проект Прайм"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Проект Prime</h3>
+                  <p class="cards-project-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/project-boxes.jpg"
+                  alt="Проект Боксес"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Проект Boxes</h3>
+                  <p class="cards-project-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/inspiration.jpg"
+                  alt="Веб-сайт проекта Inspiration has no Borders"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Inspiration has no Borders</h3>
+                  <p class="cards-project-type">Веб-сайт</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/limited-edition.jpg"
+                  alt="Издание Лимитед Эдишн"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Издание Limited Edition</h3>
+                  <p class="cards-project-type">Дизайн</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/project-lab.jpg"
+                  alt="Проект Лаб"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Проект LAB</h3>
+                  <p class="cards-project-type">Маркетинг</p>
+                </div>
+              </a>
+            </li>
+
+            <li class="cadrs-list-item">
+              <a href="">
+                <img
+                  src="./images/growing-business.jpg"
+                  alt="Приложение Гроуин бизнес"
+                  width="370"
+                  height="294"
+                />
+                <div class="project-description">
+                  <h3 class="cards-project-name">Growing Business</h3>
+                  <p class="cards-project-type">Приложение</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
 
